[fix]overflow-hidden追加 (#69)
* [fix]overflow-hidden追加

* [fix]p-top-overview__blockの背景の広さを変更

--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -107,6 +107,10 @@ $mediaquerys: (
 }
 
 
+.u-overflow{
+  overflow: hidden;
+}
+
 // body///////
 body {
   font-family: $base-font-family;
