--- a/src/sass/object/project/_p-top-overview.scss
+++ b/src/sass/object/project/_p-top-overview.scss
@@ -22,8 +22,8 @@
     background: linear-gradient(
       270deg,
       transparent 0%,
-      transparent 30%,
-      $black-sub 30%,
+      transparent 25%,
+      $black-sub 25%,
       $black-sub 100%
     );
   }
